--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "check": "tsc -b && vitest run"
   },
   "dependencies": {
+    "@auth/core": "^0.37.0",
+    "@convex-dev/auth": "^0.0.90",
     "convex": "^1.31.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -24,6 +26,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
