--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@auth/core": "^0.37.0",
     "@convex-dev/auth": "^0.0.90",
     "convex": "^1.31.6",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "papaparse": "^5.5.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
