--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
     "recharts": "^3.7.0",
+    "stripe": "^20.3.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
