docs: add Stripe env vars to .env.example
Document all required environment variables for subscription billing:
Stripe keys, webhook secret, site URL, and price IDs for each plan/interval.

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,16 @@ VITE_CONVEX_URL=
 # See: https://console.cloud.google.com/apis/credentials
 # AUTH_GOOGLE_ID=your-google-client-id
 # AUTH_GOOGLE_SECRET=your-google-client-secret
+
+# Stripe (set in Convex dashboard under Environment Variables)
+# STRIPE_SECRET_KEY=sk_test_...
+# STRIPE_WEBHOOK_SECRET=whsec_...
+
+# Base URL for Stripe checkout redirects
+# SITE_URL=http://localhost:5173
+
+# Stripe Price IDs for subscription plans (create in Stripe dashboard)
+# STRIPE_PRICE_LEAGUE_MONTHLY=price_...
+# STRIPE_PRICE_LEAGUE_YEARLY=price_...
+# STRIPE_PRICE_ASSOCIATION_MONTHLY=price_...
+# STRIPE_PRICE_ASSOCIATION_YEARLY=price_...
